# threader

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  setup-rust.js  tsconfig.json  vite.config.ts  vitest.config.ts
examples/: baseline-overhead-benchmark.ts  baseline.ts  basic.ts  concurrent-usage-test.ts  debug.ts  enhanced-functional-demo.ts  force.ts  heavy-workload-benchmark.ts  multicore-usage.ts  node.ts  performance-comparison.ts  profiles.ts  pure-performance-demo.ts  queue-analysis.ts  realistic-threader-benchmark.ts  rust-performance-demo.ts  rust.ts  scalability-analysis.ts  serial.ts  simple-threader-loop.ts  simple.ts  smart-queue-replacement.ts  stream.ts  streaming-demo.ts  streaming-workload-demo.ts  test-current-implementation.ts  test-functional-replacement.ts  test-rust-acceleration.ts  threader-performance.ts  web-server-simulation.ts
src/: index.ts  lib.rs  task_executor.rs  thread.ts  threader.ts  types.ts  worker_pool.rs
src/utils/: serialization.ts  validation.ts  worker-manager.ts
test/: test.test.ts
workers/: js-worker.js  multicore-worker.js
