# Cargo.toml
[package]
name = "threader"
version = "0.1.0"
edition = "2021"
description = "Multi-core JavaScript parallelism engine"
license = "MIT"
repository = "https://github.com/username/threader"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings for Node.js integration - using older stable version
napi = { version = "2.16", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.16"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Parallelism and threading
rayon = "1.7"
crossbeam = "0.8"
num_cpus = "1.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
tracing = "0.1"

[build-dependencies]
napi-build = "2.2.1"

[profile.release]
# Optimize for performance
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true
