# Cargo.toml - V8-powered Threader
[package]
name = "threader"
version = "0.2.0"
edition = "2024"
description = "Multi-core JavaScript parallelism engine with V8"
license = "MIT"
repository = "https://github.com/username/threader"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings for Node.js integration
napi = { version = "2.16", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.16"

# V8 JavaScript engine

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Parallelism and threading
rayon = "1.7"
crossbeam = "0.8"
num_cpus = "1.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = "0.4.41"
rusty_v8 = "0.32.1"

[build-dependencies]
napi-build = "2.2.1"

[profile.release]
# Optimize for performance
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true

# V8 specific build configuration
[target.'cfg(target_os = "windows")']
rustflags = ["-C", "target-feature=+crt-static"]
